# flextrack-hackathon

./: .gitignore  README.md  pyproject.toml
data/: public_test_data.parquet  random_prediction_data.parquet  submission.csv  training_data.parquet
src/: local_evaluation.py  random_submission.py  test.ipynb
