[project]
name = "flextrack-hackathon"
version = "0.1.0"
description = ""
authors = [{ name = "Bence Cserkuti", email = "21bcserkuti@gmail.com" }]
requires-python = ">=3.11, <3.12"
readme = "README.md"
dependencies = [
    "pandas>=1.2.0,<3.0.0",
    "numpy>=1.26.4,<2",
    "python-dotenv>=1.0.1,<2",
    "pyarrow>=15.0.2,<16",
    "fastparquet>=2024.2.0,<2025",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "scipy>=1.16.0",
    "matplotlib>=3.10.3",
    "joblib>=1.5.1",
    "delayed>=1.2.0b2",
    "optuna>=4.4.0",
    "shap>=0.48.0",
    "imbalanced-learn>=0.14.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<5",
    "jupyter>=1.1.1,<2",
    "ipykernel>=6.29.5,<7",
    "plotly>=6.1.2,<7",
    "ruff>=0.11.9,<0.12",
    "mypy>=1.15.0,<2",
    "pandas-stubs>=2.2.3.250308,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 99
extend-select = [
    # "B",
    # "BLE",
    "C4",
    "ERA",
    "I",
    "ICN",
    # "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "Q",
    # "RET",
    "RSE",
    # "RUF",
    # "S", 
    # "SIM", 
    # "T20", 
    "TID",
    "YTT"
]
exclude = ["**/*.ipynb"]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.mypy]
strict = true
show_column_numbers = true # Necessary for highlight in vscode
